fix: add more space on top and bottom of blog post so its less squished

--- a/src/styles/blog/blog.css
+++ b/src/styles/blog/blog.css
@@ -1,4 +1,8 @@
 /* layout */
+.blog {
+  padding-bottom: 170px;
+}
+
 .blog > section {
   display: grid;
   grid-template-columns: 1fr 90ch 1fr;
@@ -74,6 +78,7 @@
 
 .blog .description {
   font-style: italic;
+  padding: var(--space-l) 0;
 }
 
 /* misc: divider, time */
